[gd_scene load_steps=5 format=3 uid="uid://caflt86a831go"]

[ext_resource type="Script" uid="uid://d0v31jedhi4iv" path="res://Scenes/Other/Draw_and_discard.gd" id="1_6w3k5"]
[ext_resource type="FontFile" uid="uid://7pd1bf7pp0t6" path="res://Assets/m6x11.ttf" id="2_8px0f"]

[sub_resource type="Theme" id="Theme_mdg85"]
default_base_scale = 1.09

[sub_resource type="Theme" id="Theme_ishxv"]
default_base_scale = 1.09

[node name="DiscardAndDrawPiles" type="CanvasLayer"]
script = ExtResource("1_6w3k5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -116.0
offset_right = -73.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_mdg85")
color = Color(0.74902, 0.207843, 0.337255, 1)

[node name="DiscardPile" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 7.0
offset_top = -27.0
offset_right = 49.0
offset_bottom = 1.0
theme_override_fonts/font = ExtResource("2_8px0f")
theme_override_font_sizes/font_size = 32

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -125.0
offset_right = 106.0
offset_bottom = -62.0
grow_vertical = 0
theme = SubResource("Theme_ishxv")
color = Color(0.74902, 0.207843, 0.337255, 1)

[node name="DrawPile" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_left = 7.0
offset_top = -27.0
offset_right = 49.0
offset_bottom = 1.0
theme_override_fonts/font = ExtResource("2_8px0f")
theme_override_font_sizes/font_size = 32
